[package]
name = "envio-hyperindex-blueprint"
version = "0.1.0"
edition = "2021"
description = "A Tangle Blueprint for running envio indexers"
authors = ["Drew Stone <drewstone329@gmail.com>"]
license = "MIT OR Apache-2.0"
homepage = "https://tangle.tools"
repository = "https://github.com/tangle-network/envio-hyperindex-blueprint"
readme = "README.md"
categories = ["cryptography", "cryptography::cryptocurrencies"]
keywords = ["tangle", "blueprint", "avs"]
rust-version = "1.81"

[dependencies]
async-trait = "0.1"
color-eyre = "0.6"
structopt = "0.3.26"
serde_json = "1.0.133"
serde = "1.0.215"
lazy_static = "1.5.0"
tempfile = "3.13"
uuid = "1.11.0"
thiserror = "2.0.3"
schemars = "0.8"
kube = { version = "0.96.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.23.0", features = ["v1_31"] }
blueprint-sdk = { git = "https://github.com/tangle-network/gadget", features = ["tangle", "evm", "macros", "local-store"] }
bytes = "1.8.0"
reqwest = "0.12.9"
wiremock = "0.6.2"
fake = "3.0.1"
rand = "0.8.5"
regex = "1.11.1"
anyhow = "1.0.93"
rexpect = "0.6.0"
bollard = "0.17"
futures = "0.3.31"
testcontainers = "0.23.0"
chrono = "0.4.39"

[dev-dependencies]
k8s-openapi = { version = "0.23.0", features = ["v1_31"] }
rustls = { version = "0.23.22", features = ["aws_lc_rs"] }
aws-lc-rs = "1.11.0"
tower-test = "0.4.0"
http = "1.1.0"
http-body-util = "0.1.2"
hyper = "1.5.1"

[build-dependencies]
blueprint-metadata = "0.1.6"

[features]
default = ["std"]
std = ["blueprint-sdk/std"]

[lib]
path = "src/lib.rs"

[[bin]]
name = "envio-hyperindex-blueprint"
path = "src/main.rs"

[package.metadata.blueprint]
manager = { Evm = "HelloBlueprint" }

[[package.metadata.gadget.Native.sources]]
owner = "tangle-network"
repo = "envio-hyperindex-blueprint"
tag = "0.1.0"
binaries = [
    { arch = "Amd64", os = "Linux", name = "amd64-linux-envio-hyperindex-blueprint-gadget" },
    { arch = "Arm64", os = "Linux", name = "arm64-linux-envio-hyperindex-blueprint-gadget" },
]
